# SuiTF

./: .gitignore  Dockerfile  docker-compose.yml  make_release.sh
avalanche_alert/: Dockerfile
avalanche_alert/framework/: Cargo.toml
avalanche_alert/framework-solve/dependency/: Move.toml
avalanche_alert/framework/chall/: Move.toml
avalanche_alert/framework/src/: main.rs
avalanche_alert/sources/framework/: Cargo.toml
avalanche_alert/sources/framework-solve/solve/: Move.toml
avalanche_alert/sources/framework-solve/src/: main.rs
avalanche_alert/sources/framework/chall/sources/: alert.move
avalanche_alert/sources/framework/src/: main.rs
baby_rev/: Move.toml
baby_rev/sources/: chall.move
follow_the_constraints/: Move.toml
follow_the_constraints/sources/: constraints.move
mile_high_city/: Dockerfile
mile_high_city/framework-solve/dependency/: Move.toml
mile_high_city/framework-solve/src/: main.rs
mile_high_city/framework/chall/: Move.toml
mile_high_city/framework/chall/sources/: city.move
mile_high_city/framework/src/: main.rs
mile_high_city/sources/framework/: Cargo.toml
mile_high_city/sources/framework-solve/src/: main.rs
mile_high_city/sources/framework/src/: main.rs
nikola_jokic_favorites/sources/: run_server.sh
nikola_jokic_favorites/sources/framework/: Cargo.toml
nikola_jokic_favorites/sources/framework-solve/dependency/: Move.toml
nikola_jokic_favorites/sources/framework-solve/solve/: Move.toml
release/avalanche_alert/: framework  run_client.sh  run_server.sh
release/mile_high_city/: framework  run_client.sh  run_server.sh
release/your_secret_is_safe_with_us/: framework  run_client.sh  run_server.sh
your_secret_is_safe_with_us/: Dockerfile  run_server.sh
your_secret_is_safe_with_us/framework/chall/: Move.toml
your_secret_is_safe_with_us/framework/src/: main.rs
your_secret_is_safe_with_us/sources/: run_client.sh
your_secret_is_safe_with_us/sources/framework/: Cargo.toml
your_secret_is_safe_with_us/sources/framework/chall/sources/: safesecret.move
your_secret_is_safe_with_us/sources/framework/src/: main.rs
(+18 files in other folders)
