[package]
name = "framework"
version = "0.1.0"
edition = "2021"
exclude = ["chall/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-core-types = { git = "https://github.com/move-language/move", rev = "9b2bbcc14958f37c9adeab933f1e1d6b0db81691", features = ["address20"] }
sui-transactional-test-runner = { git = "https://github.com/MystenLabs/sui"}
#sui-ctf-framework = { git = "https://github.com/otter-sec/sui-ctf-framework" }
sui-ctf-framework = { path = "../../../../sui-ctf-framework" }
threadpool = "1.8.1"
