[package]
name = "framework"
version = "0.1.0"
edition = "2021"
exclude = ["chall/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-core-types = { git = "https://github.com/move-language/move", rev = "7343821f67c070d28dcdb5bf7d2e07ced046b52f", features = ["address20"] }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "7343821f67c070d28dcdb5bf7d2e07ced046b52f" }
sui-transactional-test-runner = { git = "https://github.com/MystenLabs/sui"}
sui-ctf-framework = { git = "https://github.com/otter-sec/sui-ctf-framework" }
# sui-ctf-framework = { git = "../../../../sui-ctf-framework" }
threadpool = "1.8.1"
